# ccxt-template

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MILESTONES.md  README.md  SPEC.md  pyproject.toml
.claude/skills/bitflyer-api/: SKILL.md
.claude/skills/bitflyer-api/references/: auth-signing.md  endpoints.md  overview.md  rate-limits.md
config/: settings.yaml
src/ccxt_template/: config.py  logger.py
src/ccxt_template/backtest/: engine.py
src/ccxt_template/cli/: main.py
src/ccxt_template/data/: fetcher.py  repository.py  schema.py
src/ccxt_template/exchange/: bitflyer_adapter.py  candle_builder.py  ccxt_client.py  realtime.py
src/ccxt_template/execution/: fee_model.py  simulator.py
src/ccxt_template/models/: candle.py
src/ccxt_template/portfolio/: manager.py
src/ccxt_template/strategy/: base.py  sma_cross.py
src/crypto_trade_mvp/backtest/: engine.py
src/crypto_trade_mvp/cli/: main.py
src/crypto_trade_mvp/data/: fetcher.py  repository.py  schema.py
src/crypto_trade_mvp/exchange/: base.py  bitflyer_adapter.py  candle_builder.py  ccxt_client.py  realtime.py
src/crypto_trade_mvp/execution/: fee_model.py  simulator.py
src/crypto_trade_mvp/models/: order.py  portfolio.py  position.py  signal.py
src/crypto_trade_mvp/portfolio/: manager.py
src/crypto_trade_mvp/strategy/: base.py  sma_cross.py
tests/: test_backtest.py  test_simulator.py  test_strategy.py
